src/test/ui/type-alias-impl-trait/declared_but_not_defined_in_scope.stderr
error: could not find defining uses
  --> $DIR/declared_but_not_defined_in_scope.rs:7:20
   |
LL |     pub type Boo = impl ::std::fmt::Debug;
   |                    ^^^^^^^^^^^^^^^^^^^^^^

error[E0308]: mismatched types
  --> $DIR/declared_but_not_defined_in_scope.rs:11:5
   |
LL |     pub type Boo = impl ::std::fmt::Debug;
   |                    ---------------------- the expected opaque type
...
LL | fn bomp() -> boo::Boo {
   |              -------- expected `impl Debug` because of return type
LL |     ""
   |     ^^ expected opaque type, found `&str`
   |
   = note: expected opaque type `impl Debug`
                found reference `&'static str`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
