src/test/ui/type-alias-impl-trait/declared_but_not_defined_in_scope.rs
#![feature(type_alias_impl_trait)]

fn main() {}

mod boo {
    // declared in module but not defined inside of it
    pub type Boo = impl ::std::fmt::Debug; //~ ERROR could not find defining uses
}

fn bomp() -> boo::Boo {
    ""
    //~^ mismatched types
}
